# motionforge

./: .gitignore  CONTEXT.md  INSTALL.md  SPEC.md  architecture.mermaid  pixi.toml  pyproject.toml
configs/: cell_example.yml
doc/: getting_started.md
motionforge/: __init__.py  cell_config.py  config.py  geometry.py  joint_state.py  types.py
motionforge/collision/: __init__.py  grid_spec.py  world_manager.py
motionforge/coordinator/: __init__.py  fakes.py  interfaces.py  state_machine.py
motionforge/execution/: __init__.py  _loop.py  abb_socket.py  adapter.py  downsample.py  fake_rapid_server.py  framing.py
motionforge/perception/: __init__.py  camera.py  frame_adapter.py  self_filter.py
motionforge/planner/: __init__.py  constraints.py  motion_planner.py  segment_builder.py
motionforge/tools/: __init__.py  tool_manager.py
scripts/: build_curobo.sh  check_curobo.py  check_gpu.py  check_isaac.py  cuda_env.sh  demo_pick_place.py  test_curobo.sh  validate_isaac.py
src/motionforge_ros/: package.xml  setup.cfg  setup.py
src/motionforge_ros/config/: params.yaml
src/motionforge_ros/launch/: planner.launch.py
src/motionforge_ros/motionforge_ros/: __init__.py  planner_node.py
tests/gpu/: conftest.py  test_collision_world.py  test_constraints_gpu.py  test_coordinator_e2e.py  test_cuda_graph_e2e.py  test_motion_planner.py  test_self_filter.py  test_tool_frames.py  test_voxel_compose_probe.py
tests/integration/: test_execution_loopback.py
tests/ros/: test_planner_node.py
tests/unit/: test_cell_config.py  test_config.py  test_constraints.py  test_coordinator.py  test_downsample.py  test_frame_adapter.py  test_framing.py  test_geometry.py  test_grid_spec.py  test_segment_builder.py  test_tool_manager.py  test_types.py  test_waypoints.py
