<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://relaxng.org/ns/structure/1.0"?>
<package format="3">
  <name>motionforge_ros</name>
  <version>0.1.0</version>
  <description>Thin ROS2 (Jazzy) node layer wrapping the motionforge GPU planning pipeline.</description>
  <maintainer email="anson08035@gmail.com">Anson</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
